k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kotlin-app
spec:
  selector:
    app: kotlin-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
